--- a/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-16 20:46-0500\n"
+"POT-Creation-Date: 2016-12-21 00:00-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: PB Project <frank+pbproject@openplans.org>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/mapseed/teams/58669/es/)\n"
@@ -451,13 +451,13 @@ msgid ""
 "There are lots of ways to get involved in PB in Oakland! You can help to get "
 "the word out to district residents, facilitate small group meetings, provide "
 "support at PB events, and more. Sign up <a href=\"http://www.123contactform."
-"com/form-2317799/My-Form\">here</a>."
+"com/form-2317799/PB-Oakland-Volunteer-Sign-Up\" target=\"_blank\">here</a>."
 msgstr ""
 "¡Hay muchísimas formas de ser parte del proceso PB en Oakland! Puedes "
 "ayudarnos a hacer correr la voz entre residentes del distrito, facilitar "
 "reuniones en grupos pequeños, asistirnos en eventos de PB y más. Apúntate <a "
-"href=\"http://www.123contactform.com/form-2373917/PB-Oakland-Volunteer-Spanish"
-"\">aquí</a>."
+"href=\"http://www.123contactform.com/form-2373917/PB-Oakland-Volunteer-"
+"Spanish\" target=\"_blank\">aquí</a>."
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:9
 msgid "Volunteer"
