--- a/src/flavors/willamette/locale/en_US/LC_MESSAGES/django.po
+++ b/src/flavors/willamette/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-14 14:47-0500\n"
+"POT-Creation-Date: 2014-08-29 16:47-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,118 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: flavors/willamette/templates/index.html:54
-msgid "Powered by"
+msgid "Enter an address..."
+msgstr ""
+
+msgid ""
+"Shareabouts is a mapping tool to gather crowd sourced public input. Use it "
+"to collect suggested locations and comments in a social, engaging process."
+msgstr ""
+
+msgid "Someone"
+msgstr ""
+
+msgid "support"
+msgstr ""
+
+msgid "Support"
+msgstr ""
+
+msgid "supports"
+msgstr ""
+
+msgid "comments"
+msgstr ""
+
+msgid "commented on"
+msgstr ""
+
+msgid "Leave a Comment"
+msgstr ""
+
+msgid "Comment"
+msgstr ""
+
+msgid "Your Name"
+msgstr ""
+
+msgid "comment"
+msgstr ""
+
+msgid "Show the Map"
+msgstr ""
+
+msgid "Submit"
+msgstr ""
+
+msgid "Tell us more..."
+msgstr ""
+
+msgid "Name"
+msgstr ""
+
+msgid "Your Email"
+msgstr ""
+
+msgid "Email address"
+msgstr ""
+
+msgid "Location Name"
+msgstr ""
+
+msgid "Location Type"
+msgstr ""
+
+msgid "Choose One"
+msgstr ""
+
+msgid "Landmark"
+msgstr ""
+
+msgid "Park"
+msgstr ""
+
+msgid "School"
+msgstr ""
+
+msgid "Description"
+msgstr ""
+
+msgid "Description..."
+msgstr ""
+
+msgid "Image"
+msgstr ""
+
+msgid "Add an Image"
+msgstr ""
+
+msgid "Add a Place"
+msgstr ""
+
+msgid "created"
+msgstr ""
+
+msgid "List All Places"
+msgstr ""
+
+msgid "About"
+msgstr ""
+
+msgid "Why Shareabouts?"
+msgstr ""
+
+msgid "Features"
+msgstr ""
+
+msgid "Documentation"
+msgstr ""
+
+msgid "Issues"
+msgstr ""
+
+msgid "GitHub"
+msgstr ""
+
+msgid "Links"
 msgstr ""
