--- a/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/es/LC_MESSAGES/django.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-10 01:31-0500\n"
+"POT-Creation-Date: 2017-02-18 03:01-0500\n"
 "PO-Revision-Date: 2017-01-10 04:18+0000\n"
 "Last-Translator: PB Project <frank+pbproject@openplans.org>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/mapseed/teams/58669/es/)\n"
@@ -423,7 +423,6 @@ msgid "About"
 msgstr "Información"
 
 #: flavors/pboakland/_config.translations.py:128
-#: flavors/pboakland/jstemplates/pages/guidelines.html:3
 msgid "Guidelines"
 msgstr "Pautas"
 
@@ -433,7 +432,6 @@ msgid "Get more involved"
 msgstr "Otras maneras de participar"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:1
-#: flavors/pboakland/jstemplates/pages/overview.html:1
 msgid ""
 "\n"
 "<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
@@ -484,41 +482,47 @@ msgstr ""
 msgid "Volunteer"
 msgstr "Voluntario"
 
-#: flavors/pboakland/jstemplates/pages/guidelines.html:1
-msgid "<strong>Anyone</strong> can post ideas."
-msgstr "<strong>Todos</strong> pueden presentar ideas."
-
-#: flavors/pboakland/jstemplates/pages/guidelines.html:2
+#: flavors/pboakland/jstemplates/pages/overview.html:1
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
+#| "<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
 msgid ""
-"Eligible ideas can be programs, services, or infrastructure improvements and "
-"must primarily benefit low-to-moderate income communities."
-msgstr ""
-"Se aceptan ideas para programas, servicios o mejoras infraestructurales. "
-"Estas deben beneficiar mayormente a comunidades de ingresos escasos o "
-"moderados."
-
-#: flavors/pboakland/jstemplates/pages/guidelines.html:4
-msgid ""
-"To add an idea, drag the map until the crosshairs are over the desired "
-"location. <strong>Only ideas within the boundaries of District 1 and "
-"District 2 will be considered.</strong>"
-msgstr ""
-"Para presentar una idea, arrastra el mapa hasta que la cruceta caiga sobre "
-"la ubicación deseada. <strong>Solo se aceptarán ideas dentro de los límites "
-"de los distritos 1 y 2.</strong>"
-
-#: flavors/pboakland/jstemplates/pages/overview.html:5
-msgid ""
-"<em><h4>The idea collection phase has now ended.</em>\n"
 "\n"
-"<h5>Up next is the PB Vote which is coming up Feb 18-22nd! "
+"\n"
+"<br>\n"
+"<br>\n"
+"<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
+"<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
 msgstr ""
+"\n"
+"<img src=\"http://i.imgur.com/01pk6VD.png\">\n"
+"<img src=\"http://i.imgur.com/YKGgrRU.png\">\n"
 
 #: flavors/pboakland/jstemplates/pages/overview.html:8
+msgid ""
+"\n"
+"<em>\n"
+"<a href=\"https://pbstanford.org/oakland2017d1\"><h1>Vote here for District "
+"1</h1></a>\n"
+"<a href=\"https://pbstanford.org/oakland2017d2\"><h1>Vote here for District "
+"2</h1></a>\n"
+"</em>\n"
+msgstr ""
+"\n"
+"<em>\n"
+"<a href=\"https://pbstanford.org/oakland2017d1\"><h1>Vote aquí para el distrito "
+"1</h1></a>\n"
+"<a href=\"https://pbstanford.org/oakland2017d2\"><h1>Vote aquí para el distrito "
+"2</h1></a>\n"
+"</em>\n"
+
+#: flavors/pboakland/jstemplates/pages/overview.html:14
 msgid "Explore the map!"
 msgstr ""
 
-#: flavors/pboakland/jstemplates/pages/overview.html:9
+#: flavors/pboakland/jstemplates/pages/overview.html:15
 msgid ""
 "For information on participatory budgeting in the U.S. and Canada, visit the "
 "website of the <a href=\"http://www.participatorybudgeting.org/\" "
@@ -529,7 +533,7 @@ msgstr ""
 "participatorybudgeting.org/\" target=”_blank”>Proyecto de Presupuesto "
 "Participativo</a>."
 
-#: flavors/pboakland/jstemplates/pages/overview.html:10
+#: flavors/pboakland/jstemplates/pages/overview.html:16
 msgid ""
 "For more information on the City of Oakland’s Community Development Block "
 "Grant (CDBG) program, click <a href=\"http://www2.oaklandnet.com/government/"
@@ -540,16 +544,22 @@ msgstr ""
 "<a href=\"http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm\" "
 "target=”_blank”>aquí</a>."
 
-#: flavors/pboakland/jstemplates/pages/overview.html:11
+#: flavors/pboakland/jstemplates/pages/overview.html:17
 msgid "Participatory Budgeting Oakland"
 msgstr "El Programa de Presupuesto Participativo en Oakland"
 
-#: flavors/pboakland/jstemplates/pages/overview.html:12
+#: flavors/pboakland/jstemplates/pages/overview.html:18
+#, fuzzy
+#| msgid ""
+#| "is an innovative democratic process that gives Oakland residents of City "
+#| "Council Districts 1 and 2 the power to decide how federal Community "
+#| "Development Block Grant (CDBG) funds should be spent to improve low-to-"
+#| "moderate income communities in their district."
 msgid ""
 "is an innovative democratic process that gives Oakland residents of City "
-"Council Districts 1 and 2 the power to decide how federal Community "
-"Development Block Grant (CDBG) funds should be spent to improve low-to-"
-"moderate income communities in their district."
+"Council Districts 1 and 2 the power to set priorities for how federal "
+"Community Development Block Grant (CDBG) funds should be spent to improve "
+"low-to-moderate income communities in their district."
 msgstr ""
 "es un innovador proceso democrático que nos brinda a los residentes de "
 "Oakland dentro de los distritos 1 y 2 del Concejo Municipal el poder de "
@@ -589,6 +599,26 @@ msgstr ""
 #: flavors/pboakland/templates/index.html:54
 msgid "Powered by"
 msgstr "Con el respaldo de"
+
+#~ msgid "<strong>Anyone</strong> can post ideas."
+#~ msgstr "<strong>Todos</strong> pueden presentar ideas."
+
+#~ msgid ""
+#~ "Eligible ideas can be programs, services, or infrastructure improvements "
+#~ "and must primarily benefit low-to-moderate income communities."
+#~ msgstr ""
+#~ "Se aceptan ideas para programas, servicios o mejoras infraestructurales. "
+#~ "Estas deben beneficiar mayormente a comunidades de ingresos escasos o "
+#~ "moderados."
+
+#~ msgid ""
+#~ "To add an idea, drag the map until the crosshairs are over the desired "
+#~ "location. <strong>Only ideas within the boundaries of District 1 and "
+#~ "District 2 will be considered.</strong>"
+#~ msgstr ""
+#~ "Para presentar una idea, arrastra el mapa hasta que la cruceta caiga "
+#~ "sobre la ubicación deseada. <strong>Solo se aceptarán ideas dentro de los "
+#~ "límites de los distritos 1 y 2.</strong>"
 
 #~ msgid ""
 #~ "<a href=\"https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F"
