--- a/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
+++ b/src/flavors/pboakland/locale/zh_Hant/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-18 03:01-0500\n"
+"POT-Creation-Date: 2017-02-21 23:26-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Language-Team: Chinese Traditional (https://www.transifex."
 "com/mapseed/teams/58669/zh-Hant/)\n"
@@ -423,63 +423,12 @@ msgid "Guidelines"
 msgstr "指南"
 
 #: flavors/pboakland/_config.translations.py:129
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:8
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:17
 msgid "Get more involved"
 msgstr "積極參與此活動"
 
 #: flavors/pboakland/jstemplates/pages/getinvolved.html:1
-msgid ""
-"\n"
-"<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
-"<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
-msgstr ""
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:5
-msgid ""
-"<iframe src=\"http://www.123contactform.com/form-1169694/PB-Oakland-Contact-"
-"Us\" height=\"400\" width=100% </iframe>"
-msgstr ""
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:6
-msgid ""
-"Already submitted an idea? There are many more ways to get involved in "
-"participatory budgeting:"
-msgstr "已經提交了看法嗎？有很多方式可以參與預算編制活動："
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:7
-msgid "Contact Us"
-msgstr "聯絡我們"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:9
-msgid "Have a question? Feel free to contact us."
-msgstr "有問題？請隨時聯絡我們。"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:10
-msgid ""
-"There are lots of ways to get involved in PB in Oakland! You can help to get "
-"the word out to district residents, facilitate small group meetings, provide "
-"support at PB events, and more. Sign up <a href=\"http://www.123contactform."
-"com/form-2317799/PB-Oakland-Volunteer-Sign-Up\" target=\"_blank\">here</a>."
-msgstr ""
-"有很多方式可以參與奧克蘭的PB活動！您可以幫助把資訊傳遞給地區居民，促進小組會"
-"議舉行，為PB活動提供支援等。登記<a href=\"http://www.123contactform.com/"
-"form-2317799/PB-Oakland-Volunteer-Sign-Up\" target=\"_blank\">這裡</a>。"
-
-#: flavors/pboakland/jstemplates/pages/getinvolved.html:11
-msgid "Volunteer"
-msgstr "志願者"
-
 #: flavors/pboakland/jstemplates/pages/overview.html:1
-msgid ""
-"\n"
-"\n"
-"<br>\n"
-"<br>\n"
-"<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
-"<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
-msgstr ""
-
-#: flavors/pboakland/jstemplates/pages/overview.html:8
 msgid ""
 "\n"
 "<em>\n"
@@ -491,13 +440,133 @@ msgid ""
 msgstr ""
 "\n"
 "<em>\n"
-"<a href=\"https://pbstanford.org/oakland2017d2\"><h1>投票處 "
-"</h1></a>\n"
+"<a href=\"https://pbstanford.org/oakland2017d2\"><h1>投票處 </h1></a>\n"
 "</em>\n"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:7
+msgid ""
+"\n"
+"<h4>The PB Vote takes place Feb 18-22nd!</h4>\n"
+msgstr ""
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:10
+#: flavors/pboakland/jstemplates/pages/overview.html:7
+msgid ""
+"\n"
+"<img src=\"http://i.imgur.com/u13G9jG.png\">\n"
+"<img src=\"http://i.imgur.com/nkhPpWV.png\">\n"
+msgstr ""
+"\n"
+"<img src=\"http://i.imgur.com/6WdFSrs.png\">\n"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:14
+msgid ""
+"<iframe src=\"http://www.123contactform.com/form-1169694/PB-Oakland-Contact-"
+"Us\" height=\"400\" width=100% </iframe>"
+msgstr ""
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:15
+msgid ""
+"Already submitted an idea? There are many more ways to get involved in "
+"participatory budgeting:"
+msgstr "已經提交了看法嗎？有很多方式可以參與預算編制活動："
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:16
+msgid "Contact Us"
+msgstr "聯絡我們"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:18
+msgid "Have a question? Feel free to contact us."
+msgstr "有問題？請隨時聯絡我們。"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:19
+msgid ""
+"There are lots of ways to get involved in PB in Oakland! You can help to get "
+"the word out to district residents, facilitate small group meetings, provide "
+"support at PB events, and more. Sign up <a href=\"http://www.123contactform."
+"com/form-2317799/PB-Oakland-Volunteer-Sign-Up\" target=\"_blank\">here</a>."
+msgstr ""
+"有很多方式可以參與奧克蘭的PB活動！您可以幫助把資訊傳遞給地區居民，促進小組會"
+"議舉行，為PB活動提供支援等。登記<a href=\"http://www.123contactform.com/"
+"form-2317799/PB-Oakland-Volunteer-Sign-Up\" target=\"_blank\">這裡</a>。"
+
+#: flavors/pboakland/jstemplates/pages/getinvolved.html:20
+msgid "Volunteer"
+msgstr "志願者"
+
+#: flavors/pboakland/jstemplates/pages/guidelines.html:1
+msgid ""
+"\n"
+"<h2>How does PB work in Oakland?</h2>\n"
+"<p>\n"
+"Participatory Budgeting (PB) is an innovative democratic process that gives "
+"Oakland residents of City Council Districts 1 and 2 the power to set "
+"priorities for how federal Community Development Block Grant (CDBG) funds "
+"should be spent to improve low-to-moderate income communities in their "
+"districts. The projects that receive the most votes up to the maximum dollar "
+"amount will become the CDBG priorities for the district. In December and "
+"January, residents came together at events in their districts and online to "
+"discuss community needs and brainstorm ideas for funded projects that would "
+"benefit low-to-moderate incomes communities. In early February, volunteer "
+"budget delegates evaluated and prioritized those ideas and turned them into "
+"the priority projects that will appear on the PB ballot from February 18-22, "
+"2017.\n"
+"</p>\n"
+"<p>\n"
+"Following the vote, the City of Oakland will release a Request for Proposals "
+"(RFP), and city and non-profit agencies may apply for funds to implement "
+"priority projects. Community Development District Board Members in Districts "
+"1 and 2 will review all applications in response to the RFP and make "
+"recommendations to the city on which should be funded. For more information "
+"on the RFP process, <a href=\"http://www2.oaklandnet.com/government/o/hcd/s/"
+"CDBG/index.htm\">visit the City of Oakland's CDBG website</a>.\n"
+"</p>\n"
+"<p>\n"
+"<strong>In Council District 1</strong>, the 2017-19 CDBG allocation is "
+"$113,654 per year over two years, or $227,308 in total. For a map of the "
+"CDBG eligible area, <a href=\"http://www2.oaklandnet.com/oakca1/groups/ceda/"
+"documents/webcontent/dowd009136.pdf\">click here</a>.\n"
+"</p>\n"
+"<p>\n"
+"<strong>In Council District 2</strong>, the 2017-19 CDBG allocation is "
+"$278,685 per year over two years, or $557,370 in total. For a map of the "
+"CDBG eligible area, <a href=\"http://www2.oaklandnet.com/oakca1/groups/ceda/"
+"documents/webcontent/dowd009137.pdf\">click here</a>.\n"
+"</p>\n"
+"<p>\n"
+"Not sure if you live in District 1 or 2? Enter your address on <a href="
+"\"https://participatorybudgeting.nationbuilder.com/r?u=http%3A%2F%2Fmapgis."
+"oaklandnet.com%2Fcouncildistricts"
+"%2F&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakd1vote&n=7&test_email=1\">this "
+"map</a> to find out.\n"
+"</p>\n"
+"<em><strong>\n"
+"For a full description of the PB process in Oakland, download the <a href="
+"\"https://drive.google.com/file/d/0B8FaQ6MQKJm1U0xQSVNUQ1ZEZk0/view?"
+"usp=sharing\">PB Oakland 2016-17 Rulebook</a>.\n"
+"</em>\n"
+"</strong>\n"
+msgstr ""
+
+#: flavors/pboakland/jstemplates/pages/guidelines.html:23
+msgid ""
+"\n"
+"<iframe src=\"https://player.vimeo.com/video/162743651?"
+"color=ff9933&byline=0\" width=\"640\" height=\"360\" frameborder=\"0\" "
+"webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>\n"
+msgstr ""
+
+#: flavors/pboakland/jstemplates/pages/overview.html:11
+msgid ""
+"\n"
+"<strong><p>Voting will take place at the district kick off events (details "
+"below), online, and at mobile sites throughout the districts.<br><br>Online "
+"voting will run through Feb 22</strong>\n"
+msgstr ""
 
 #: flavors/pboakland/jstemplates/pages/overview.html:14
 msgid "Explore the map!"
-msgstr ""
+msgstr "探索地圖！"
 
 #: flavors/pboakland/jstemplates/pages/overview.html:15
 msgid ""
@@ -523,7 +592,6 @@ msgid "Participatory Budgeting Oakland"
 msgstr "參與奧克蘭預算編制"
 
 #: flavors/pboakland/jstemplates/pages/overview.html:18
-#, fuzzy
 #| msgid ""
 #| "is an innovative democratic process that gives Oakland residents of City "
 #| "Council Districts 1 and 2 the power to decide how federal Community "
